--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,13 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.1.1'
-    compile 'com.github.satyan:sugar:1.3'
+    compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
 }
