--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,15 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="fluxdev.org.screenmonitor" >
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.DEVICE_POWER" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name="com.activeandroid.app.Application"
         android:theme="@style/AppTheme" >
-        <meta-data android:name="DATABASE" android:value="screenmonitor.db" />
-        <meta-data android:name="VERSION" android:value="1.0" />
-        <meta-data android:name="QUERY_LOG" android:value="true" />
-        <meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="org.fluxdev" />
+        <meta-data android:name="AA_DB_NAME" android:value="screenmonitor.db" />
+        <meta-data android:name="AA_DB_VERSION" android:value="1" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
@@ -38,6 +41,8 @@
             >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.ACTION_SHUTDOWN" />
+                <action android:name="android.intent.action.QUICKBOOT_POWEROFF" />
             </intent-filter>
         </receiver>
     </application>
